[package]
name = "hybrid_blockchain"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "tcp_module",
]

[dependencies]
sha2 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "macros"] }
tokio-macros = "1.0"
actix-web = "4"
actix-service = "2.0.0"
futures = "0.3" 
log = "0.4"
env_logger = "0.11"
crossbeam = "0.8"
tcp_module = { path = "./tcp_module" }
ed25519-dalek = "1.0.1"
base64 = "0.21.0"